--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule .* index.php
+RewriteRule .* index.php [L,QSA]
